[code] added pageIndex and rowIndex in response
